--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Keshav Thakur</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/DKeSHaV13" class="twitter"><i class="bx bxl-twitter"></i></a>
           <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
