--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
         </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- ======= Blogs Section ======= -->
+    <section id="blogs" class="blogs section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -256,10 +256,10 @@
         </div>
 
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
+        <div class="col-lg-4 col-md-6 blogs-item filter-card">
+          <div class="blogs-wrap">
             <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-            <div class="portfolio-links">
+            <div class="blogs-links">
               <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                 title="Card 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -281,7 +281,7 @@
       </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Blogs Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
