--- a/index.html
+++ b/index.html
@@ -255,25 +255,16 @@
 
         </div>
         
-<!--         <div class="Want to learn Linux in Hindi"> -->
-<!--           <div class="blogs-wrap"> -->
-<!--             <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt=""> -->
-            <div class="blogs-links">
-<!--               <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" -->
-                title="want to learn linux"><i class="bx bx-plus"></i></a>
-              <a href="https://keshu.medium.com/want-to-learn-linux-in-hindi-ba8e69ee361c" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
 
 
-        <div class="col-lg-4 col-md-6 blogs-item filter-card">
+
+        <div class="linux">
           <div class="blogs-wrap">
-            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-8.jpg" class="linux" alt="">
             <div class="blogs-links">
-              <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                title="Card 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="https://keshu.medium.com/want-to-learn-linux-in-hindi-ba8e69ee361c" data-gallery="portfolioGallery" class="linux"
+                title="linux"><i class="bx bx-plus"></i></a>
+              <a href="https://keshu.medium.com/want-to-learn-linux-in-hindi-ba8e69ee361c" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
