--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
         <div class="linux">
           <div class="blogs-wrap">
-            <img src="assets/img/portfolio/portfolio-8.jpg" class="linux" alt="">
+            <img src="assets/img/linux.png" class="linux" alt="">
             <div class="blogs-links">
               <a href="https://keshu.medium.com/want-to-learn-linux-in-hindi-ba8e69ee361c" data-gallery="portfolioGallery" class="linux"
                 title="linux"><i class="bx bx-plus"></i></a>
