--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 class="text-light"><a href="index.html">Keshav Thakur</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/DKeSHaV13" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
+          <a href="#" class="tryhackme"><i class="simple-icons:tryhackme"></i></a>
           <a href="https://www.instagram.com/d_keshav4/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
           <a href="https://www.linkedin.com/in/keshav-kumar-372b4921b" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -261,12 +261,12 @@
        
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+          <div class="blogs-wrap">
+            <img src="assets/img/linux.png" class="img-fluid" alt="">
+            <div class="blogs-links">
+<!--               <a href="assets/img/linux.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                title="1st blog"><i class="bx bx-plus"></i></a> -->
+              <a href="https://keshu.medium.com/want-to-learn-linux-in-hindi-ba8e69ee361c" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
