--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 class="text-light"><a href="index.html">Keshav Thakur</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/DKeSHaV13" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="tryhackme"><i class="simple-icons:tryhackme"></i></a>
+<!--           <a href="#" class="tryhackme"><i class="simple-icons:tryhackme"></i></a> -->
           <a href="https://www.instagram.com/d_keshav4/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
           <a href="https://www.linkedin.com/in/keshav-kumar-372b4921b" class="linkedin"><i class="bx bxl-linkedin"></i></a>
