--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <!-- <img src="assets/img/linux.png" class="img-fluid" alt=""> -->
             <!-- <div class="portfolio-links"> -->
 
-              <a target="_blank" href="https://keshu.medium.com/lets-learn-python-in-your-android-phone-hindi-english-bee3f232819a"><img src="assets/img/learnpy.png" alt="Learn Python In Mobile Phone"
+              <a target="_blank" href="https://keshu.medium.com/lets-learn-python-in-your-android-phone-hindi-english-bee3f232819a"><img src="assets/img/learnpy.jpg" alt="Learn Python In Mobile Phone"
                   style="height: 240px;width: 420px;;"></a>
             </div>
           </div>
