--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Flask <i class="val">00%</i></span>
+              <span class="skill">Django <i class="val">00%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="00" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -202,7 +202,7 @@
           <h2>Resume</h2>
           <p>write something.</p>
         </div>
-        <embed src="assets/img/Resume.pdf" type="application/pdf" frameBorder="100" scrolling="auto" height="1100px"
+        <embed src="assets/img/Resume1.pdf" type="application/pdf" frameBorder="100" scrolling="auto" height="1100px"
           width="1000px"></embed>
 
 
