--- a/index.html
+++ b/index.html
@@ -343,14 +343,15 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-shield-fill-check"></i></div>
             <h4 class="title"><a href="">Security Analyst</a></h4>
-            <p class="description">i can protect your company</p>
+            <p class="description">i can improve your security system</p>
           </div>
 
           <div class="row">
             <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-search"></i></div>
               <h4 class="title"><a href="">Digital Forensic Investigation</a></h4>
-              <p class="description">contack me for digital forensic investigation</p>
+              <p class="description">contact me for digital forensic investigation/ Data Recovery from any platfrom 
+              {Window/Linux/Android Phone</p>
 
             </div>
 
