--- a/index.html
+++ b/index.html
@@ -288,19 +288,19 @@
 
 
 
-          <!-- <div class="col-lg-4 col-md-6 blogs-item filter-app">
+          <div class="col-lg-4 col-md-6 blogs-item filter-app">
             <div class="blogs-wrap">
-              <a target="_blank" href=""><img src="assets/img/linux.png" alt="Learn Linux In Mobile Phone"
+              <a target="_blank" href="https://keshu.medium.com/day2-of-lets-learn-python-in-your-android-phone-fd50ba55bc66"><img src="assets/img/linux.png" alt="Day2 Learn Linux In Mobile Phone"
                 style="height: 240px;width: 420px;;"></a>
               <div class="blogs-info">
-                <h4>Blog 2</h4>
-                <p>Learn Linux in your android phone</p>
+                <h4>Blog 3</h4>
+                <p>Day2 of Learn Python in your android phone</p>
                 <div class="blog-links">
                  
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
 
 
 
