--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Keshav Thakur</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/DKeSHaV13" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a  target="_blank" href="https://twitter.com/DKeSHaV13" class="twitter"><i class="bx bxl-twitter"></i></a>
 
-          <a href="https://www.instagram.com/d_keshav4/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://github.com/KeSHaV-4" class=GitHub">"<i class="bi bi-github"></i></a>
-          <a href="https://www.linkedin.com/in/keshav-kumar-372b4921b" class="linkedin"><i
+          <a  target="_blank" href="https://www.instagram.com/d_keshav4/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a target="_blank"  href="https://github.com/KeSHaV-4" class=GitHub">"<i class="bi bi-github"></i></a>
+          <a  target="_blank" href="https://www.linkedin.com/in/keshav-kumar-372b4921b" class="linkedin"><i
               class="bx bxl-linkedin"></i></a>
         </div>
       </div>
