--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a  target="_blank" href="https://twitter.com/DKeSHaV13" class="twitter"><i class="bx bxl-twitter"></i></a>
 
           <a  target="_blank" href="https://www.instagram.com/d_keshav4/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a target="_blank"  href="https://github.com/KeSHaV-4" class=GitHub">"<i class="bi bi-github"></i></a>
+          <a target="_blank"  href="https://github.com/KeSHaV-4" class="GitHub">"<i class="bi bi-github"></i></a>
           <a  target="_blank" href="https://www.linkedin.com/in/keshav-kumar-372b4921b" class="linkedin"><i
               class="bx bxl-linkedin"></i></a>
         </div>
