--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
           <div class="col-lg-4 col-md-6 blogs-item filter-app">
             <div class="blogs-wrap">
-              <a target="_blank" href="https://keshu.medium.com/day2-of-lets-learn-python-in-your-android-phone-fd50ba55bc66"><img src="assets/img/linux.png" alt="Day2 Learn Linux In Mobile Phone"
+              <a target="_blank" href="https://keshu.medium.com/day2-of-lets-learn-python-in-your-android-phone-fd50ba55bc66"><img src="assets/img/learnpy.jpg" alt="Day2 Learn Linux In Mobile Phone"
                 style="height: 240px;width: 420px;;"></a>
               <div class="blogs-info">
                 <h4>Blog 3</h4>
