--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@
 
           <!-- <div class="col-lg-4 col-md-6 blogs-item filter-app">
             <div class="blogs-wrap">
-              <a target="_blank" href=""><img src="assets/img/linux.png" alt="Learn Linux In Mobile Phone"
+              <a target="_blank" href="https://medium.com/@keshu/installations-configuration-of-snort-b240e29c8966"><img src="assets/img/i.png" alt="Installations & Configurations Of Snort"
                 style="height: 240px;width: 420px;;"></a>
               <div class="blogs-info">
                 <h4>Blog 2</h4>
-                <p>Learn Linux in your android phone</p>
+                <p>Install & Config Snort</p>
                 <div class="blog-links">
                   
                 </div>
