--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
 
 
-          <div class="col-lg-4 col-md-6 blogs-item filter-app">
+<!--           <div class="col-lg-4 col-md-6 blogs-item filter-app">
             <div class="blogs-wrap">
               <a target="_blank" href=""><img src="assets/img/linux.png" alt="Learn Linux In Mobile Phone"
                 style="height: 200px;width: 340px;;"></a>
@@ -284,7 +284,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
 
 
@@ -305,6 +305,21 @@
 
 
 
+          <div class="col-lg-4 col-md-6 blogs-item filter-app">
+            <div class="blogs-wrap">
+              <a target="_blank" href="https://medium.com/@keshu/installations-configuration-of-snort-b240e29c8966"><img src="assets/img/i.png" alt="Installations & Configurations Of Snort"
+                style="height: 240px;width: 420px;;"></a>
+              <div class="blogs-info">
+                <h4>Blog 2</h4>
+                <p>Install & Config Snort</p>
+                <div class="blog-links">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+  
+ 
           <!-- <div class="col-lg-4 col-md-6 blogs-item filter-app">
             <div class="blogs-wrap">
               <a target="_blank" href="https://medium.com/@keshu/installations-configuration-of-snort-b240e29c8966"><img src="assets/img/i.png" alt="Installations & Configurations Of Snort"
@@ -318,8 +333,6 @@
               </div>
             </div>
           </div> -->
-  
-  
   
   
   
