--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@
 
           <div class="col-lg-4 col-md-6 blogs-item filter-app">
             <div class="blogs-wrap">
-              <a target="_blank" href="https://medium.com/@keshu/installations-configuration-of-snort-b240e29c8966"><img src="assets/img/i.png" alt="Installations & Configurations Of Snort"
+              <a target="_blank" href="https://keshu.medium.com/some-of-the-most-common-networking-95e3e180eba9"><img src="assets/img/networking.jpeg" alt="Installations & Configurations Of Snort"
                 style="height: 240px;width: 400px;;"></a>
               <div class="blogs-info">
                 <h4>Blog 4</h4>
-                <p>Install & Config Snort</p>
+                <p>Most Common Networing Protocol</p>
                 <div class="blog-links">
                   
                 </div>
