--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>myPortfolio</title>
+  <title>Keshav Thakur Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -50,7 +50,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Keshav Thakur</a></h1>
         <div class="social-links mt-3 text-center">
-          <a  target="_blank" href="https://twitter.com/DKeSHaV13" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a  target="_blank" href="https://twitter.com/d_keshav4" class="twitter"><i class="bx bxl-twitter"></i></a>
 
           <a  target="_blank" href="https://www.instagram.com/d_keshav4/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a target="_blank"  href="https://github.com/KeSHaV-4" class="GitHub"><i class="bi bi-github"></i></a>
