--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2>Resume</h2>
           <p>write something.</p>
         </div>
-        <embed src="assets/img/Resume1.pdf" type="application/pdf" frameBorder="100" scrolling="auto" height="1100px"
+        <embed src="assets/img/New-Resume.pdf" type="application/pdf" frameBorder="100" scrolling="auto" height="1100px"
           width="1000px"></embed>
 
 
