--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
           <div class="col-lg-4 col-md-6 blogs-item filter-app">
             <div class="blogs-wrap">
-              <a target="_blank" href="https://keshu.medium.com/some-of-the-most-common-networking-95e3e180eba9"><img src="assets/img/networking.jpeg" alt="Installations & Configurations Of Snort"
+              <a target="_blank" href="https://keshu.medium.com/some-of-the-most-common-networking-95e3e180eba9"><img src="assets/img/networking.jpeg" alt=""
                 style="height: 240px;width: 400px;;"></a>
               <div class="blogs-info">
                 <h4>Blog 4</h4>
