--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   
   
   
-        <div class="row blogs-container">
+<!--         <div class="row blogs-container"> -->
   
           <div class="col-lg-4 col-md-6 blogs-item filter-app">
             <div class="blogs-wrap">
@@ -308,7 +308,7 @@
           <div class="col-lg-4 col-md-6 blogs-item filter-app">
             <div class="blogs-wrap">
               <a target="_blank" href="https://keshu.medium.com/some-of-the-most-common-networking-95e3e180eba9"><img src="assets/img/networking.jpeg" alt=""
-                style="height: 240px;width: 400px;;"></a>
+                style="height: 240px;width: 340px;;"></a>
               <div class="blogs-info">
                 <h4>Blog 4</h4>
                 <p>Most Common Networing Protocol</p>
@@ -323,7 +323,7 @@
           <div class="col-lg-4 col-md-6 blogs-item filter-app">
             <div class="blogs-wrap">
               <a target="_blank" href="https://keshu.medium.com/lets-learn-linux-in-android-phone-6d7946bd69f9"><img src="" alt="Iearn Linux In Your Android Phone"
-                style="height: 240px;width: 420px;;"></a>
+                style="height: 200px;width: 4230px;;"></a>
               <div class="blogs-info">
                 <h4>Blog 5</h4>
                 <p>Iearn Linux In Your Android Phone</p>
