--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>write....something</p>
+          <p>I am a passionate and motivated blue team student with a strong desire to learn and grow in the
+cybersecurity field. I am currently pursuing a diploma in electrical engineering, and I have a strong
+foundation in computer science and networking. I am also proficient in a variety of security tools and
+technologies, including ethical hacking, Python, and Linux.</p>
         </div>
 
         <div class="row">
@@ -202,7 +205,7 @@
           <h2>Resume</h2>
           <p>write something.</p>
         </div>
-        <embed src="assets/img/New-Resume.pdf" type="application/pdf" frameBorder="100" scrolling="auto" height="1100px"
+        <embed src="assets/img/infosec-resume2.0.pdf" type="application/pdf" frameBorder="100" scrolling="auto" height="1100px"
           width="1000px"></embed>
 
 
