--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ technologies, including ethical hacking, Python, and Linux.</p>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 April 2003</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://medium.com/@keshu</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+916200806503</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>India</span></li>
                 </ul>
@@ -155,15 +155,15 @@ technologies, including ethical hacking, Python, and Linux.</p>
             <div class="progress">
               <span class="skill">Python <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Django <i class="val">00%</i></span>
+              <span class="skill">Volatility <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="00" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -175,17 +175,17 @@ technologies, including ethical hacking, Python, and Linux.</p>
             <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100"> -->
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">00%</i></span>
+              <span class="skill">FTK Imager <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="00" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">00%</i></span>
+              <span class="skill">CSS <i class="val">30%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="00" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
