--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         <div class="section-title">
           <h2>About</h2>
           <p>I am a passionate and motivated blue team student with a strong desire to learn and grow in the
-cybersecurity field. I am currently pursuing a diploma in electrical engineering, and I have a strong
+cybersecurity field. I am currently completed my  diploma in electrical engineering, and I have a strong
 foundation in computer science and networking. I am also proficient in a variety of security tools and
-technologies, including ethical hacking, Python, and Linux.</p>
+technologies, including pentesting, Security Analyst, Python, and Linux.</p>
         </div>
 
         <div class="row">
