--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Keshav Thakur</h1>
-      <p>I'm <span class="typed" data-typed-items="Security Analyst "></span></p>
+      <p>I'm <span class="typed" data-typed-items="NPD Engineer "></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -145,7 +145,7 @@ technologies, including pentesting, Security Analyst, Python, and Linux.</p>
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">80%</i></span>
+              <span class="skill"> B.M.S <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -153,7 +153,7 @@ technologies, including pentesting, Security Analyst, Python, and Linux.</p>
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">40%</i></span>
+              <span class="skill"> Cell NMC, LFP <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -161,7 +161,7 @@ technologies, including pentesting, Security Analyst, Python, and Linux.</p>
             </div>
 
             <div class="progress">
-              <span class="skill">Volatility <i class="val">50%</i></span>
+              <span class="skill">Python <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
